--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,20 +12,20 @@ theme:
     repo: fontawesome/brands/github
   palette:
     # Catppuccin Mocha theme
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: custom
-      accent: green
-      toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: custom
-      accent: green
-      toggle:
-        icon: material/brightness-4
-        name: Switch to light mode
+    #- media: "(prefers-color-scheme: dark)"
+     # scheme: slate
+     # primary: custom
+     # accent: green
+     # toggle:
+     #   icon: material/brightness-7
+     #   name: Switch to dark mode
+    #- media: "(prefers-color-scheme: dark)"
+     # scheme: slate
+     # primary: custom
+     # accent: green
+     # toggle:
+     #   icon: material/brightness-4
+      #  name: Switch to light mode
   
   features:
     - announce.dismiss
