--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,8 +31,8 @@ theme:
     - navigation.instant.prefetch
     - navigation.instant.progress
     - navigation.sections
-    - navigation.tabs
-    - navigation.tabs.sticky
+    #- navigation.tabs
+    #- navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
     - search.highlight
