--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ theme:
     - navigation.instant
     - navigation.instant.prefetch
     - navigation.instant.progress
-    - navigation.sections
+    #- navigation.sections
     #- navigation.tabs
     #- navigation.tabs.sticky
     - navigation.top
