--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ theme:
     - content.tooltips
     - navigation.expand
     - navigation.footer
-    - navigation.indexes
+    #- navigation.indexes
     - navigation.instant
     - navigation.instant.prefetch
     - navigation.instant.progress
