--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ theme:
     - content.tabs.link
     - content.tooltips
     - navigation.expand
-    - navigation.footer
+    #- navigation.footer
     #- navigation.indexes
     - navigation.instant
     - navigation.instant.prefetch
