--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ theme:
     - content.tabs.link
     - content.tooltips
     - navigation.expand
-    #- navigation.footer
+    #- navigation.footer         # <-- USUNIĘTO, ABY POZBYĆ SIĘ PRZYCISKÓW NEXT/PREVIOUS
     #- navigation.indexes
     - navigation.instant
     - navigation.instant.prefetch
@@ -98,6 +98,7 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/kCn3333
   generator: false
+  pygments_style: 'dracula' # <-- DODANO: Wymuszenie kolorowania Pygments na schemat Dracula
 
 extra_css:
   - stylesheets/retro.css
