--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,7 +73,7 @@ markdown_extensions:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
-      pygments_style: dracula  
+      pygments_style: one-dark  
   - pymdownx.inlinehilite
   - pymdownx.keys
   - pymdownx.magiclink:
@@ -103,8 +103,8 @@ extra:
 extra_css:
   - stylesheets/retro.css
 
-extra_javascript:
-  - javascripts/matrix-homelab.js
+#extra_javascript:
+ # - javascripts/matrix-homelab.js
 
 # Custom footer content
 copyright: |
