--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,14 +18,14 @@ theme:
   
   features:
     - announce.dismiss
-    - content.action.edit
+    #- content.action.edit
     - content.action.view
     - content.code.annotate
     - content.code.copy
     - content.tabs.link
     - content.tooltips
-    - navigation.expand
-    #- navigation.footer         # <-- USUNIĘTO, ABY POZBYĆ SIĘ PRZYCISKÓW NEXT/PREVIOUS
+    #- navigation.expand
+    #- navigation.footer         
     #- navigation.indexes
     - navigation.instant
     - navigation.instant.prefetch
@@ -35,9 +35,9 @@ theme:
     #- navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
-    - search.highlight
-    - search.share
-    - search.suggest
+    #- search.highlight
+    #- search.share
+    #- search.suggest
     - toc.follow
 
 plugins:
