--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,37 @@
-# .github/workflows/main.yml
-name: Deploy Astro Starlight Site
+name: Deploy MkDocs site
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
-    # use Ubuntu
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
-          # history needed for GitHub Pages deployment
-          fetch-depth: 0 
+          fetch-depth: 0
 
-      - name: Setup Node.js
-        # use newest setup-node action
-        uses: actions/setup-node@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          # newest LTS version
-          node-version: "24"
-          # cache yarn and npm dependencies
+          python-version: "3.x"
 
+      - name: Install MkDocs + plugins
+        run: |
+          pip install mkdocs-material
+          pip install mkdocs-roamlinks-plugin
+          pip install mkdocs-callouts
+          pip install mkdocs-git-revision-date-localized-plugin
+          pip install mkdocs-awesome-pages-plugin
 
-      - name: Install dependencies
-        # for faster and more reliable installs
-        run: npm install
-
-      - name: Build Astro Starlight
-        # run the build script from package.json
-        run: npm run build
+      - name: Build MkDocs
+        run: mkdocs build --clean
 
       - name: Deploy to GitHub Pages
-        # deploy using peaceiris gh-pages action
         uses: peaceiris/actions-gh-pages@v3
         with:
-          # access token to push to GH Pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # directory to publish
-          publish_dir: ./dist 
-          # branch to
-          publish_branch: gh-pages
+          publish_dir: ./site
