another small update

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,9 +27,9 @@ theme:
     #- navigation.expand
     #- navigation.footer         
     #- navigation.indexes
-    - navigation.instant
-    - navigation.instant.prefetch
-    - navigation.instant.progress
+    #- navigation.instant
+    #- navigation.instant.prefetch
+    #- navigation.instant.progress
     #- navigation.sections
     #- navigation.tabs
     #- navigation.tabs.sticky
@@ -73,8 +73,8 @@ markdown_extensions:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
-      pygments_style: one-dark 
-      use_pygments: false  # 
+      #pygments_style: one-dark 
+      use_pygments: true  # 
   - pymdownx.superfences 
   - pymdownx.inlinehilite
   - pymdownx.keys
@@ -104,11 +104,11 @@ extra:
 
 extra_css:
   - stylesheets/retro.css
-  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css
+  #- https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css
 
-extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js
-  - javascripts/hljs-init.js
+#extra_javascript:
+ # - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js
+ # - javascripts/hljs-init.js
  # - javascripts/matrix-homelab.js
 
 # Custom footer content
