--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,18 +10,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 
         with:
           fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5 
         with:
           python-version: "3.x"
 
       - name: Install MkDocs + plugins
         run: |
-          pip install mkdocs-material
+          # Instalacja Material z opcjonalnymi zależnościami dla lepszego kolorowania/emoji
+          pip install mkdocs-material[extra] 
+          # Wymuszamy najnowsze Pygments
+          pip install Pygments 
+          
+          # Twoje niestandardowe pluginy
           pip install mkdocs-roamlinks-plugin
           pip install mkdocs-callouts
           pip install mkdocs-git-revision-date-localized-plugin
@@ -31,7 +36,7 @@ jobs:
         run: mkdocs build --clean
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4 
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./site
