--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,17 +113,17 @@ extra_css:
 
 
 nav:
-  - ':material-home Home': index.md
+  - material/home "Home": index.md
 
 
-  - ":material-excavator: Infrastructure": 
-    - ":material-server-network: network":  infrastructure/home.md
+  - material/excavator "Infrastructure": 
+    - material/server-network "network":  infrastructure/home.md
     - ":material-hammer-screwdriver: project server": https://kcn333.pl/home_server
 
-  - ":octicons-rocket-24: Provisioning": provisioning/
+  - octicons/rocket-24  "Provisioning": provisioning
   
 
-  - ":material-application-cog: Applications":
+  - material/application-cog "Applications":
       
     - ":simple-docker: Docker Compose Repo": https://github.com/kCn3333/docker-compose
     - ":octicons-terminal-24: .bashrc": https://github.com/kCn3333/linux-bash/blob/main/.bashrc
@@ -138,7 +138,7 @@ nav:
 
 
   - ":simple-inductiveautomation: Automation": 
-    - ":material-ansible: Ansible playbooks": automation/
+    - ":material-ansible: Ansible playbooks": automation
     - ":simple-stackshare: n8n workflows": https://github.com/kCn3333/n8n_workflows
       
   - ":material-bug-check: Troubleshooting": troubleshooting
