--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ theme:
     - toc.follow
 
 plugins:
-  - awesome-pages
+  #- awesome-pages
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
   - roamlinks
@@ -67,8 +67,8 @@ markdown_extensions:
   - pymdownx.caret
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
+        emoji_index: !!python/name:materialx.emoji.twemoji
+        emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
@@ -113,17 +113,17 @@ extra_css:
 
 
 nav:
-  - material/home "Home": index.md
+  - ":material-home: Home": index.md
 
 
-  - material/excavator "Infrastructure": 
-    - material/server-network "network":  infrastructure/home.md
+  - ":material-excavator: Infrastructure": 
+    - ":material-server-network: network":  infrastructure/home.md
     - ":material-hammer-screwdriver: project server": https://kcn333.pl/home_server
 
-  - octicons/rocket-24  "Provisioning": provisioning
+  - ":octicons/rocket-24:  Provisioning": provisioning
   
 
-  - material/application-cog "Applications":
+  - ":material/application-cog: Applications":
       
     - ":simple-docker: Docker Compose Repo": https://github.com/kCn3333/docker-compose
     - ":octicons-terminal-24: .bashrc": https://github.com/kCn3333/linux-bash/blob/main/.bashrc
