--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,8 +67,8 @@ markdown_extensions:
   - pymdownx.caret
   - pymdownx.details
   - pymdownx.emoji:
-        emoji_index: !!python/name:materialx.emoji.twemoji
-        emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
@@ -120,10 +120,10 @@ nav:
     - ":material-server-network: network":  infrastructure/home.md
     - ":material-hammer-screwdriver: project server": https://kcn333.pl/home_server
 
-  - ":octicons/rocket-24:  Provisioning": provisioning
+  - ":octicons-rocket-24:  Provisioning": provisioning
   
 
-  - ":material/application-cog: Applications":
+  - ":material-application-cog: Applications":
       
     - ":simple-docker: Docker Compose Repo": https://github.com/kCn3333/docker-compose
     - ":octicons-terminal-24: .bashrc": https://github.com/kCn3333/linux-bash/blob/main/.bashrc
