--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,7 @@ extra:
 
 extra_css:
   - stylesheets/retro.css
+  - stylesheets/code-blocks.css
   #- https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css
 
 #extra_javascript:
