--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
           pip install mkdocs-roamlinks-plugin
           pip install mkdocs-callouts
           pip install mkdocs-git-revision-date-localized-plugin
+          pip install mkdocs-git-authors-plugin
           pip install mkdocs-awesome-pages-plugin
 
       - name: Build MkDocs
