--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ plugins:
   - awesome-pages
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
-  - roamlinks
+  #- roamlinks
   - callouts
   - git-revision-date-localized:
       enable_creation_date: true
